Make nav bar look better. Fix overflow issues and use of icons

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,7 @@
     @apply focus-within:outline focus-within:outline-2 focus-within:outline-offset-2 focus-within:outline-[color:var(--theme-purple)] hover:opacity-80 hover:outline-[color:var(--theme-purple)];
   }
   .authButton {
-    @apply mb-2 mr-2 mt-2 rounded-md border border-gray-300 px-2 py-1 text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 dark:text-gray-300;
+    @apply mb-2 ml-2 h-10 mt-2 rounded-md border border-gray-300 px-2 py-2 text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 dark:text-gray-300;
 
   }
 }
